css/pages/listpacks.css
.packs-nav {
    display: flex;
    background-color: black;
}

.packs-nav > button{
    border-top-right-radius: 0.75em;
    border-top-left-radius: 0.75em;
    border: none;
    padding: 10px;
    padding-left: 25px;
    padding-right: 25px;
    text-align: start;
    word-break: normal;
    overflow-wrap: anywhere;
    cursor: pointer;
}

.pack-list .list-container,
.pack-list .level-container,
.pack-list .meta-container {
    padding-block: 2rem;
}
.pack-list .list-container {
    padding-inline: 1rem;
}
.pack-list .meta-container {
    padding-right: 2rem;
}

.pack-list .list {
    table-layout: auto;
}
.pack-list .list .rank {
    text-align: end;
    padding-right: 1rem;
}
.pack-list .list .level {
    width: 100%;
}
.pack-list .list .level button {
    background-color: var(--color-background);
    color: var(--color-on-background);
    border: none;
    border-radius: 0.5rem;
    padding: 1rem;
    text-align: start;
    word-break: normal;
    overflow-wrap: anywhere;
    cursor: pointer;
}
.pack-list .list .level.error button {
    color: var(--color-error);
    cursor: not-allowed;
    text-decoration: line-through;
}
.pack-list .list .level button:hover {
    background-color: var(--color-background-hover);
    color: var(--color-on-background-hover);
}
.pack-list .list .level.active button {
    background-color: var(--color-primary);
    color: var(--color-on-primary);
}
.pack-list .level-container .level {
    display: flex;
    flex-direction: column;
    gap: 2rem;
    padding-right: 2rem;
    max-width: 48rem;
}
.pack-list .level-container .level .level-authors {
    display: grid;
    grid-template-columns: max-content 1fr;
    grid-auto-rows: max-content;
    gap: 1rem;
}
.pack-list .level-container .level .video {
    aspect-ratio: 16/9;
}
.pack-list .level-container .level .stats {
    display: flex;
    justify-content: space-evenly;
    text-align: center;
    gap: 2rem;
}
.pack-list .level-container .level .stats li {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 1rem;
}
.pack-list .level-container .level .records {
    table-layout: fixed;
}
.pack-list .level-container .level .records tr td:not(:last-child) {
    padding-right: 1rem;
}
.pack-list .level-container .level .records .percent,
.pack-list .level-container .level .records .user,
.pack-list .level-container .level .records .hz {
    padding-block: 1rem;
}
.pack-list .level-container .level .records .user {
    width: 100%;
}
.pack-list .level-container .level .records .percent,
.pack-list .level-container .level .records .hz {
    text-align: end;
}
.pack-list .meta-container .og a:hover,
.pack-list .level-container .level .records a:hover {
    text-decoration: underline;
}
.pack-list .meta {
    display: flex;
    flex-direction: column;
    gap: 2rem;
}
.pack-list .meta .errors {
    display: flex;
    flex-direction: column;
    gap: 1rem;
}
.pack-list .meta .errors .error {
    padding: 1rem;
    background-color: var(--color-error);
    color: var(--color-on-error);
    border-radius: 0.5rem;
}
.pack-list .meta .editors {
    display: flex;
    flex-direction: column;
    gap: 0.75rem;
}
.pack-list .meta .editors li {
    display: flex;
    align-items: center;
    gap: 0.5rem;
}
.pack-list .meta .editors li img {
    height: 1.25rem;
}
.pack-list .meta .editors li a:hover {
    text-decoration: underline;
}
.tag {
    font-family: "Lexend Deca", sans-serif;
    display:block;
    border-radius: 14px;
    color: white;
    background-color: #5d5d5d;
    padding: 7px;
}

